gccida/c3/simplify_plus_minus
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2260:27: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_plus_minus( rtx_code code, machine_mode mode, rtx op0, rtx op1, int force) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2260:42: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_plus_minus( rtx_code code, machine_mode mode, rtx op0, rtx op1, int force) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2294:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v37; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2302:6: error: use of undeclared identifier 'v45'
rtx *v45; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2310:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v53; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2313:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2313:5: error: use of undeclared identifier 'v56'
rtx v56; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2322:4: error: expected ';' after expression
rtx v65; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2322:5: error: use of undeclared identifier 'v65'
rtx v65; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2334:6: error: use of undeclared identifier 'v77'
rtx *v77; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2338:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v81; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2359:4: error: expected ';' after expression
rtx v105; // [rsp+70h] [rbp-C8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2359:5: error: use of undeclared identifier 'v105'
rtx v105; // [rsp+70h] [rbp-C8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2366:6: error: use of undeclared identifier 'v112'
rtx *v112; // [rsp+100h] [rbp-38h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2373:1: error: use of undeclared identifier 'v105'
v105 = op1; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2450:9: error: expected expression
*( rtx *)&base[v11] = const_int_rtx[63]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2489:8: error: use of undeclared identifier 'v105'
v26 = &v105; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2507:8: error: use of undeclared identifier 'v105'
v28 = &v105; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/simplify-rtx.c:2516:8: error: use of undeclared identifier 'v105'
v30 = &v105; 
       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_plus_minus/src/obj/simplify-rtx.o] Error 1
